# pseudo-runner

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pseudo-runner.code-workspace  server.ts  tsconfig.json
client/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
client/src/: extension.ts  runPseudo.ts
client/src/test/: completion.test.ts  diagnostics.test.ts  helper.ts  index.ts  runTest.ts
client/testFixture/: diagnostics.ps
server/: Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
server/src/: main.rs  server.ts
server/src/validators/: assignment.ts  customRegex.ts  declare.ts  ifelse.ts  index.ts  while.ts
src/: extension.ts  runPseudo.ts
src/server/: keywords.ts  server.ts
src/server/validators/: customRegex.ts  declare.ts  forloop.ts  index.ts  while.ts
syntaxes/: pseudo.tmLanguage.json
